sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe entity identifier.
 */
typedef uint64_t GoudEntityId;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Base code for context/initialization errors.
 */
#define CONTEXT_ERROR_BASE 1
/**
 * Base code for resource/asset errors.
 */
#define RESOURCE_ERROR_BASE 100
/**
 * Base code for internal/unexpected errors.
 */
#define INTERNAL_ERROR_BASE 900
/* === ECS === */

/**
 * Checks if an entity has a specific component.
 */
bool goud_component_has(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a read-only pointer to a component on an entity.
 */
const uint8_t *goud_component_get(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a mutable pointer to a component on an entity.
 */
uint8_t *goud_component_get_mut(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Adds the same component type to multiple entities in a single batch.
 */
uint32_t goud_component_add_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, const uint8_t *data_ptr, size_t component_size);
/**
 * Registers a component type with the engine.
 */
bool goud_component_register_type(uint64_t type_id_hash, const uint8_t *name_ptr, size_t name_len, size_t size, size_t align);
/**
 * Adds a component to an entity.
 */
GoudResult goud_component_add(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash, const uint8_t *data_ptr, size_t data_size);
/**
 * Removes a component from an entity.
 */
GoudResult goud_component_remove(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Checks if an entity is currently alive in the world.
 */
bool goud_entity_is_alive(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Checks if multiple entities are currently alive in the world.
 */
uint32_t goud_entity_is_alive_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint8_t *out_results);