sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Checks if multiple entities are currently alive in the world.
        ///
        ///  Results are written to the `out_results` array, where each entry is:
        ///  - `1` (true) if the entity is alive
        ///  - `0` (false) if the entity is dead or invalid
        ///
        ///  This is more efficient than calling `goud_entity_is_alive()` multiple times.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context to check
        ///  * `entity_ids` - Pointer to array of entity IDs to check
        ///  * `count` - Number of entities in the array
        ///  * `out_results` - Pointer to array where results will be written (size = count)
        ///
        ///  # Returns
        ///
        ///  The number of results written (should equal `count` on success, 0 on error).
        ///
        ///  # Safety
        ///
        ///  Caller must ensure:
        ///  - `entity_ids` points to valid memory with at least `count` u64 values
        ///  - `out_results` points to valid memory with at least `count` u8 values
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = { e1, e2, e3, e4, e5 };
        ///  byte[] results = new byte[5];
        ///  fixed (ulong* ePtr = entities)
        ///  fixed (byte* rPtr = results) {
        ///      int count = goud_entity_is_alive_batch(contextId, ePtr, 5, rPtr);
        ///      for (int i = 0; i &lt; count; i++) {
        ///          Console.WriteLine($"Entity {i} alive: {results[i] != 0}");
        ///      }
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_entity_is_alive_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_entity_is_alive_batch(GoudContextId context_id, ulong* entity_ids, uint count, byte* out_results);

        /// <summary>
        ///  Registers a component type with the engine.
        ///
        ///  This must be called once for each component type before it can be used.
        ///  The type ID hash should be stable across runs (e.g., from a const in C#).
        ///
        ///  # Parameters
        ///
        ///  - `type_id_hash`: Unique 64-bit identifier for the component type
        ///  - `name_ptr`: Null-terminated C string with the type name (for debugging, currently unused)
        ///  - `name_len`: Length of the name string (excluding null terminator)
        ///  - `size`: Size of the component in bytes
        ///  - `align`: Alignment of the component in bytes
        ///
        ///  # Returns
        ///
        ///  `true` if the type was newly registered, `false` if already registered.
        ///
        ///  # Safety
        ///
        ///  - `name_ptr` must be a valid pointer to a C string (or null)
        ///  - `name_len` must match the actual string length
        ///  - `size` and `align` must match the actual type layout
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_register_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_component_register_type(ulong type_id_hash, byte* name_ptr, nuint name_len, nuint size, nuint align);

        /// <summary>
        ///  Adds a component to an entity.
        ///
        ///  If the entity already has this component type, it will be replaced.
        ///
        ///  # Parameters
        ///
        ///  - `context_id`: The engine context
        ///  - `entity_id`: The entity to add the component to
        ///  - `type_id_hash`: Type ID of the component (from registration)
        ///  - `data_ptr`: Pointer to the component data
        ///  - `data_size`: Size of the component data in bytes
        ///
        ///  # Returns
        ///
        ///  `GoudResult` with success=true if component was added, error otherwise.
        ///
        ///  # Safety
        ///
        ///  - `data_ptr` must point to valid component data
        ///  - `data_size` must match the registered size
        ///  - Memory at `data_ptr` must remain valid for the duration of the call
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_add", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Result goud_component_add(GoudContextId context_id, GoudEntityId entity_id, ulong type_id_hash, byte* data_ptr, nuint data_size);

        /// <summary>
        ///  Removes a component from an entity.
        ///
        ///  # Parameters
        ///
        ///  - `context_id`: The engine context
        ///  - `entity_id`: The entity to remove the component from
        ///  - `type_id_hash`: Type ID of the component to remove
        ///
        ///  # Returns
        ///
        ///  `GoudResult` with success=true if component was removed, error otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Result goud_component_remove(GoudContextId context_id, GoudEntityId entity_id, ulong type_id_hash);

        /// <summary>
        ///  Checks if an entity has a specific component.
        ///
        ///  # Parameters
        ///
        ///  - `context_id`: The engine context
        ///  - `entity_id`: The entity to check
        ///  - `type_id_hash`: Type ID of the component
        ///
        ///  # Returns
        ///
        ///  `true` if entity has the component, `false` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_has", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_component_has(GoudContextId context_id, GoudEntityId entity_id, ulong type_id_hash);

        /// <summary>
        ///  Gets a read-only pointer to a component on an entity.
        ///
        ///  The returned pointer is valid until the next mutable operation on the World.
        ///
        ///  # Parameters
        ///
        ///  - `context_id`: The engine context
        ///  - `entity_id`: The entity to get the component from
        ///  - `type_id_hash`: Type ID of the component
        ///
        ///  # Returns
        ///
        ///  Pointer to the component data, or null if not found.
        ///
        ///  # Safety
        ///
        ///  - Returned pointer is only valid until next mutable World operation
        ///  - Caller must not modify data through this pointer
        ///  - Caller must not retain pointer across FFI calls
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* goud_component_get(GoudContextId context_id, GoudEntityId entity_id, ulong type_id_hash);

        /// <summary>
        ///  Gets a mutable pointer to a component on an entity.
        ///
        ///  The returned pointer is valid until the next operation on the World.
        ///
        ///  # Parameters
        ///
        ///  - `context_id`: The engine context
        ///  - `entity_id`: The entity to get the component from
        ///  - `type_id_hash`: Type ID of the component
        ///
        ///  # Returns
        ///
        ///  Mutable pointer to the component data, or null if not found.
        ///
        ///  # Safety
        ///
        ///  - Returned pointer is only valid until next World operation
        ///  - Caller must ensure exclusive access (no concurrent reads/writes)
        ///  - Caller must not retain pointer across FFI calls
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_get_mut", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* goud_component_get_mut(GoudContextId context_id, GoudEntityId entity_id, ulong type_id_hash);

        /// <summary>
        ///  Adds the same component type to multiple entities in a single batch.
        ///
        ///  This is more efficient than calling `goud_component_add()` multiple times
        ///  when adding the same component type to many entities.
        ///
        ///  # Arguments
        ///
        ///  * `context_id` - The context containing the entities
        ///  * `entity_ids` - Pointer to array of entity IDs
        ///  * `count` - Number of entities
        ///  * `type_id_hash` - Hash of the component type
        ///  * `data_ptr` - Pointer to array of component data (size = count * component_size)
        ///  * `component_size` - Size of a single component instance
        ///
        ///  # Returns
        ///
        ///  The number of entities that successfully received the component.
        ///
        ///  # Safety
        ///
        ///  Caller must ensure:
        ///  - `entity_ids` points to valid memory with `count` u64 values
        ///  - `data_ptr` points to valid memory with `count * component_size` bytes
        ///  - `component_size` matches the registered component type size
        ///
        ///  # Error Codes
        ///
        ///  - `CONTEXT_ERROR_BASE + 3` (InvalidContext) - Invalid context ID
        ///  - `RESOURCE_ERROR_BASE + 100` (ResourceNotFound) - Component type not registered
        ///  - `INTERNAL_ERROR_BASE + 2` (InvalidState) - Size mismatch
        ///
        ///  # Example (C#)
        ///
        ///  ```csharp
        ///  ulong[] entities = { e1, e2, e3, e4, e5 };
        ///  Position[] positions = {
        ///      new Position { x = 0, y = 0 },
        ///      new Position { x = 10, y = 10 },
        ///      new Position { x = 20, y = 20 },
        ///      new Position { x = 30, y = 30 },
        ///      new Position { x = 40, y = 40 }
        ///  };
        ///  fixed (ulong* ePtr = entities)
        ///  fixed (Position* pPtr = positions) {
        ///      int added = goud_component_add_batch(
        ///          contextId, ePtr, 5, positionTypeId,
        ///          pPtr, sizeof(Position)
        ///      );
        ///      Console.WriteLine($"Added components to {added} entities");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_component_add_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint goud_component_add_batch(GoudContextId context_id, ulong* entity_ids, uint count, ulong type_id_hash, byte* data_ptr, nuint component_size);
